# wasm-lab

./: CMakeLists.txt  build.sh  embuild.sh
include/: functions.h
src/: embind.cpp  functions.cpp  jsheapbuffer.cpp  jsheapbuffer.h
wasm/: memory.js  post.js  pre.js
web/: index.html
